# nodes-demo

./: Cargo.toml  README.md
lib/: Cargo.toml
lib/android-lib/: Cargo.toml  Makefile
lib/android-lib/scripts/: rs-lib-android-build.sh
lib/android-lib/src/: lib.rs
lib/src/: api.rs  client.rs  lib.rs  server.rs
mobile/: .metadata  README.md  pubspec.yaml
mobile/android/: build.gradle  settings.gradle
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/org/myshelf/mobile/: MainActivity.kt
mobile/android/app/src/profile/: AndroidManifest.xml
mobile/android/src/main/: AndroidManifest.xml
mobile/android/src/main/kotlin/org/myshelf/nodedemo/node_demo/: NodeDemoPlugin.kt
mobile/example/: README.md  pubspec.yaml
mobile/example/android/app/: build.gradle
mobile/example/android/app/src/debug/: AndroidManifest.xml
mobile/example/android/app/src/main/: AndroidManifest.xml
mobile/example/android/app/src/main/kotlin/org/myshelf/nodedemo/node_demo_example/: MainActivity.kt
mobile/example/ios/Runner/: Info.plist
mobile/example/ios/Runner.xcodeproj/: project.pbxproj
mobile/example/lib/: main.dart
mobile/example/test/: widget_test.dart
mobile/ios/: node_demo.podspec
mobile/ios/Classes/: NodeDemoPlugin.h  NodeDemoPlugin.m  SwiftNodeDemoPlugin.swift
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart  node_demo.dart  node_test.dart
mobile/test/: node_demo_test.dart
