[package]
name = "android-lib"
version = "0.1.0"
authors = ["mo_blaa <moblaa@gmx.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "android_lib"
crate-type = ["staticlib", "cdylib"]

[dependencies]
node-lib = { path = "../" }
url = "2.1.1"
tokio = { version = "0.2", features = ["full"] }
tonic = "0.3.0"
